layout problem solve

--- a/css/style.css
+++ b/css/style.css
@@ -116,12 +116,11 @@ a:hover {
     letter-spacing: 0.025em;
     font-weight: 500;
     font-size: 0.875rem;
-    height: 40px;
+    height: 41px;
     padding: 0px 17px;
     border: 2px solid var(--primary);
     border-radius: 4px 0px 0px 4px;
     outline: none;
-
 }
 
 .search-box-btn {
@@ -231,7 +230,7 @@ a:hover {
 
 .navbar.navbar-2 .nav-link {
     color: var(--white) !important;
-    font-size: 14px;
+    font-size: 15px;
     margin-right: 10px;
 }
 
@@ -416,7 +415,7 @@ a:hover {
 
 .mobile-nav-login-link {
     border: 1px solid var(--border-color);
-    padding: 6px 8px;
+    padding: 7px 7px;
     border-radius: 50%;
     padding-top: 2px;
     display: inline-block;
@@ -568,13 +567,11 @@ button.mobile-nav-button:focus {
     border-radius: 8px;
     overflow: hidden;
     display: "block";
-
 }
 
 .shop-by-brand-item .figure {
     position: relative;
-    top: 0;
-    left: 0;
+    width: 100%;
     height: 100%;
     padding-bottom: 100%;
     opacity: 1;
@@ -598,6 +595,7 @@ button.mobile-nav-button:focus {
     text-overflow: ellipsis;
     color: rgb(50, 62, 70);
     line-height: 20px;
+    font-weight: 600;
     
 }
 
@@ -623,22 +621,47 @@ button.mobile-nav-button:focus {
 
 
 /* ************** Bags and luaggs ******************* */
-.bag-luggage-item {
-    background-color: var(--white);
-    padding: 18px 10px;
-    border-radius: 5px;
+.product-cart{
+    height: 100%;
+    background-color: #fff;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.product-cart-img{
+    position: relative;
+    background-color: rgb(237, 242, 247);
+    height: 100%;
+    padding-bottom: 92%;
+    opacity: 1;
+    
+}
+.product-cart-img img{
+    transition: all 0.3s linear 0s;
+}
+.product-cart-img img:hover{
+    transform: scale(1.1);
+}
+.product-cart-text{
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    white-space: pre-wrap;
+    line-height: 18px;
+    width: 100%;
+    height: 36px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: bold;
+    font-size: 16px;
+}
+.span-text {
+    width: 100%;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 21px !important;
     text-align: center;
-    box-shadow: 0 0 5px 0 rgba(0, 0, 0, .05);
+    display: block;
 }
-
-.bag-luggage-item img {
-    transition: all 0.40s linear;
-}
-
-.bag-luggage-item img:hover {
-    transform: scale(1.05)
-}
-
 /* **************Footer ************ */
 .footer {
     background: rgb(51, 62, 79);
